--- a/index.html
+++ b/index.html
@@ -34,6 +34,48 @@
                 </div>
              </div>
     </section>
-    
+    <!----- FOOTER ---->
+    <section class="footer">
+        <img src="/images/smallsmall-svglogo.svg" alt="#">
+        <div class="row">
+            <div class="footer-col">
+                <h3>Products</h3>
+                <ul>
+                    <li>Rent</li>
+                    <li>Stay Nightly</li>
+                    <li>Buy</li>
+                </ul>
+        </div>
+        <div class="footer-col">
+            <h3>Company</h3>
+            <ul>
+                <li>About us</li>
+                <li>Blog</li>
+                <li>Careers</li>
+            </ul>
+        </div>
+        <div class="footer-col">
+            <h3>Legal</h3>
+            <ul>
+                <li>Privacy Policy</li>
+                <li>Terms & Conditions</li>
+                <li>Subscription terms</li>
+                <li>FAQ</li>
+            </ul>
+        </div>
+        <div class="footer-col">
+            <h3>Contact Us</h3>
+            <p>Talk to us hello@smallsmall.com</p>
+        </div>
+        <div class="icons">
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-linkedin"></i>
+        </div>
+    </div>
+    <img width="50px" height="15px" src="/images/app store.png" alt="#">
+    <img width="50px"  src="/images/google play.png" alt="#">
+    </section>
 </body>
 </html>
