--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:wght@100;200;300;600;700&family=Public+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!---Opeyemi's Section-->
     <section class="blog">
             <h2>Blogs on living a quality life</h2>
             <p>
@@ -71,10 +72,12 @@
             </div>    
         </div>
     </div>
-    <footer class="footer">
+    <footer>
+        <div class="footer">
         <img width="50px" height="15px" src="/images/app store.png" alt="#">
         <img width="50px"  src="/images/google play.png" alt="#">
         <p>&copy; 2023 Group 1 copyright</p>
+        </div>
     </footer>
     </section>
 </body>
