cleared some problem with the css file

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <nav>
     <ul class="links flex">
       <a href="" class="icon"
-        ><img src="Image/smallsmall-svglogo.svg" alt="cloneSmallSmall-Image"
+        ><img src="images/smallsmall-svglogo.svg" alt="cloneSmallSmall-Image"
       /></a>
       <li>
         <a href="#"><span class="small">Rent</span><br />RentSmallSmall</a>
@@ -88,7 +88,7 @@
     <div class="smart">
       <!-- code for Affordable nightly stay section -->
       <div class="smartLeft">
-        <img class="leftImage1" src="Image/undraw_choosing_house_re_1rv7.svg" alt="">
+        <img class="leftImage1" src="images/undraw_choosing_house_re_1rv7.svg" alt="">
         <h3 class="payRent2">0% on agency and legal fees <br> 18 Locations <br> N1.6bn saved on agency and legal fees</h3>
         </div>
       <!-- code for buy real estate section -->
@@ -109,7 +109,7 @@
     <div class="explore">
       <!-- code for Affordable nightly stay section -->
       <div class="left">
-        <img class="leftImage1" src="Image/undraw_travel_booking_re_6umu.svg" alt="">
+        <img class="leftImage1" src="images/undraw_travel_booking_re_6umu.svg" alt="">
         <h3 class="affordable">Affordable Nightly Stay</h3>
         <h5 class="pay">Pay SmallSmall</h5>
         <button type="button" class="btn">
@@ -121,7 +121,7 @@
       </div>
       <!-- code for buy real estate section -->
       <div class="right">
-        <img class="rightImage2" src="Image/undraw_buy_house_re_8xq7.svg" alt="">
+        <img class="rightImage2" src="images/undraw_buy_house_re_8xq7.svg" alt="">
         <h3 class="affordable">Buy real estate & start earning <br>guranteed rent </h3>
         <h5 class="pay">Pay SmallSmall</h5>
         <button type="button" class="btn2">
@@ -140,7 +140,7 @@
       <!-- code for Apartment grid display section for Rent -->
       <div class="property-container">
         <div class="property1">
-          <div class="image01"><img class="image_1" src="Image/image1.jpeg" alt="">
+          <div class="image01"><img class="image_1" src="images/apart 2.jpeg" alt="">
             <div class="availability-status">Available - <span class="available">now</span></div>          
           </div>
           <div class="detailed-container">
@@ -163,7 +163,7 @@
         </div>       
         </div>
         <div class="property2">
-          <div class="image02"><img class="image_1" src="Image/image2.jpeg" alt="">
+          <div class="image02"><img class="image_1" src="images/image2.jpeg" alt="">
             <div class="availability-status">Available - <span class="available">now</span></div>          
           </div>
           <div class="detailed-container">
@@ -186,7 +186,7 @@
         </div>
         </div>
         <div class="property3">
-          <div class="image03"><img class="image_1" src="Image/image3.jpg" alt="">
+          <div class="image03"><img class="image_1" src="images/image3.jpg" alt="">
             <div class="availability-status">Available - <span class="available">now</span></div>          
           </div>
           <div class="detailed-container">
@@ -209,7 +209,7 @@
         </div>
         </div>
         <div class="property4">
-          <div class="image04"><img class="image_1" src="Image/image4.jpeg" alt="">
+          <div class="image04"><img class="image_1" src="images/image4.jpeg" alt="">
             <div class="availability-status">Available - <span class="available">now</span></div>          
           </div>
           <div class="detailed-container">
@@ -240,7 +240,7 @@
        <!-- code for Apartment grid display section for Stay -->
        <div class="property-container">
         <div class="property1">
-          <div class="image01"><img class="image_1" src="Image/image1.jpeg" alt="">
+          <div class="image01"><img class="image_1" src="images/image5.jpg" alt="">
             <div class="availability-status">Available - <span class="available">now</span></div>          
           </div>
           <div class="detailed-container">
@@ -263,7 +263,7 @@
         </div>       
         </div>
         <div class="property2">
-          <div class="image02"><img class="image_1" src="Image/image2.jpeg" alt="">
+          <div class="image02"><img class="image_1" src="images/image6.jpeg" alt="">
             <div class="availability-status">Available - <span class="available">now</span></div>          
           </div>
           <div class="detailed-container">
@@ -286,7 +286,7 @@
         </div>
         </div>
         <div class="property3">
-          <div class="image03"><img class="image_1" src="Image/image3.jpg" alt="">
+          <div class="image03"><img class="image_1" src="images/image7.jpeg" alt="">
             <div class="availability-status">Available - <span class="available">now</span></div>          
           </div>
           <div class="detailed-container">
@@ -309,7 +309,7 @@
         </div>
         </div>
         <div class="property4">
-          <div class="image04"><img class="image_1" src="Image/image4.jpeg" alt="">
+          <div class="image04"><img class="image_1" src="images/image9.jpg" alt="">
             <div class="availability-status">Available - <span class="available">now</span></div>          
           </div>
           <div class="detailed-container">
@@ -340,7 +340,7 @@
        <!-- code for Apartment grid display section for Buy -->
        <div class="property-container">
         <div class="property1">
-          <div class="image01"><img class="image_1" src="Image/image1.jpeg" alt="">
+          <div class="image01"><img class="image_1" src="images/image5.jpg" alt="">
             <div class="availability-status">Available - <span class="available">now</span></div>          
           </div>
           <div class="detailed-container">
@@ -363,7 +363,7 @@
         </div>       
         </div>
         <div class="property2">
-          <div class="image02"><img class="image_1" src="Image/image2.jpeg" alt="">
+          <div class="image02"><img class="image_1" src="images/image10.jpg" alt="">
             <div class="availability-status">Available - <span class="available">now</span></div>          
           </div>
           <div class="detailed-container">
@@ -386,7 +386,7 @@
         </div>
         </div>
         <div class="property3">
-          <div class="image03"><img class="image_1" src="Image/image3.jpg" alt="">
+          <div class="image03"><img class="image_1" src="images/image11.jpg" alt="">
             <div class="availability-status">Available - <span class="available">now</span></div>          
           </div>
           <div class="detailed-container">
@@ -409,7 +409,7 @@
         </div>
         </div>
         <div class="property4">
-          <div class="image04"><img class="image_1" src="Image/image4.jpeg" alt="">
+          <div class="image04"><img class="image_1" src="images/image11.jpg" alt="">
             <div class="availability-status">Available - <span class="available">now</span></div>          
           </div>
           <div class="detailed-container">
